tests/build/widget_new/missing_value6.stderr
error: expected `;`
 --> $DIR/missing_value6.rs:8:9
  |
8 |         margin = 0;
  |         ^^^^^^

error[E0061]: this function takes 2 arguments but 1 argument was supplied
   --> $DIR/missing_value6.rs:7:31
    |
7   |         background_gradient = 0.deg(),
    |                               ^------
    |                               |
    |                               supplied 1 argument
    |                               expected 2 arguments
    |
note: associated function defined here
   --> $DIR/visual.rs:119:1
    |
119 | #[property(inner)]
    | ^^^^^^^^^^^^^^^^^^
    = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
